--- a/x11-libs/libXmu/ChangeLog
+++ b/x11-libs/libXmu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXmu
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXmu/ChangeLog,v 1.24 2006/06/30 15:47:58 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXmu/ChangeLog,v 1.25 2006/06/30 22:39:21 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; -libXmu-1.0.0.ebuild:
+  Pull old ebuild.
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libXmu-1.0.2.ebuild:
   Stable on amd64.
