--- a/sys-kernel/genkernel/ChangeLog
+++ b/sys-kernel/genkernel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.140 2006/06/22 14:37:01 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.141 2006/06/30 22:41:14 plasmaroo Exp $
+
+*genkernel-3.4.0_pre2 (30 Jun 2006)
+
+  30 Jun 2006; <plasmaroo@gentoo.org> +genkernel-3.4.0_pre2.ebuild:
+  PCMCIA modules_load updates.
 
   22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   genkernel-3.4.0_pre1.ebuild:
