--- a/x11-proto/evieext/ChangeLog
+++ b/x11-proto/evieext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/evieext
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.24 2006/06/30 22:22:44 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.25 2006/06/30 23:14:19 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; evieext-1.0.2.ebuild:
+  arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; evieext-1.0.2.ebuild:
   ppc/sparc/mips/alpha stable
