--- a/x11-proto/fontsproto/ChangeLog
+++ b/x11-proto/fontsproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/fontsproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.22 2006/06/30 22:15:24 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.23 2006/06/30 23:06:48 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  fontsproto-2.0.2.ebuild:
+  arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   fontsproto-2.0.2.ebuild:
