--- a/x11-proto/randrproto/ChangeLog
+++ b/x11-proto/randrproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/randrproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.24 2006/06/30 22:16:48 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.25 2006/06/30 23:08:30 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  randrproto-1.1.2.ebuild:
+  arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   randrproto-1.1.2.ebuild:
