--- a/x11-proto/scrnsaverproto/ChangeLog
+++ b/x11-proto/scrnsaverproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/scrnsaverproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/scrnsaverproto/ChangeLog,v 1.21 2006/06/30 22:18:12 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/scrnsaverproto/ChangeLog,v 1.22 2006/06/30 23:09:52 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  scrnsaverproto-1.1.0.ebuild:
+  arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   scrnsaverproto-1.1.0.ebuild:
