--- a/x11-proto/xproxymanagementprotocol/ChangeLog
+++ b/x11-proto/xproxymanagementprotocol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xproxymanagementprotocol
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproxymanagementprotocol/Attic/ChangeLog,v 1.13 2006/06/30 22:22:23 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproxymanagementprotocol/Attic/ChangeLog,v 1.14 2006/06/30 23:13:59 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xproxymanagementprotocol-1.0.2.ebuild:
+  arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xproxymanagementprotocol-1.0.2.ebuild:
