--- a/x11-libs/libXpm/ChangeLog
+++ b/x11-libs/libXpm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXpm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXpm/ChangeLog,v 1.25 2006/06/30 22:38:41 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXpm/ChangeLog,v 1.26 2006/06/30 23:31:09 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXpm-3.5.5.ebuild:
+  ppc/sparc/mips/alpha/arm/sh stable
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   -libXpm-3.5.4.2.ebuild:
