--- a/x11-libs/libXv/ChangeLog
+++ b/x11-libs/libXv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXv
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXv/ChangeLog,v 1.20 2006/06/30 15:54:09 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXv/ChangeLog,v 1.21 2006/06/30 23:34:38 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXv-1.0.1.ebuild:
+  ppc/sparc/mips/alpha/arm/sh stable
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libXv-1.0.1.ebuild:
   Stable on amd64.
