--- a/x11-wm/twm/ChangeLog
+++ b/x11-wm/twm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/twm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.20 2006/06/30 15:22:10 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.21 2006/06/30 23:53:51 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; twm-1.0.1.ebuild:
+  ppc/sparc/mips/alpha/arm/sh stable
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> twm-1.0.1.ebuild:
   Stable on amd64.
