--- a/x11-apps/xrdb/ChangeLog
+++ b/x11-apps/xrdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrdb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.20 2006/06/30 15:00:45 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.21 2006/06/30 23:54:39 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; -xrdb-1.0.1.ebuild:
+  Pull old version.
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> xrdb-1.0.2.ebuild:
   Stable on amd64.
