--- a/x11-apps/bdftopcf/ChangeLog
+++ b/x11-apps/bdftopcf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/bdftopcf
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/bdftopcf/ChangeLog,v 1.25 2006/06/30 19:10:59 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/bdftopcf/ChangeLog,v 1.26 2006/06/30 23:44:57 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  bdftopcf-1.0.0.ebuild:
+  ppc/sparc/mips/alpha/arm/sh stable
 
   30 Jun 2006; Marien Zwart <marienz@gentoo.org>
   files/digest-bdftopcf-1.0.0, Manifest:
