--- a/net-im/wildfire/ChangeLog
+++ b/net-im/wildfire/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-im/wildfire
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/wildfire/Attic/ChangeLog,v 1.1 2006/02/26 13:36:31 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/wildfire/Attic/ChangeLog,v 1.2 2006/06/30 23:59:46 humpback Exp $
+
+  30 Jun 2006; Gustavo Felisberto <humpback@gentoo.org>; metadata.xml,
+  +wildfire-2.6.2.ebuild:
+  Adding 2.6.2 to portage. Credits to everyone in bug #120513
+
+*wildfire-2.6.2 (27 Jun 2006)
+
+  27 Jun 2006; Gustavo Felisberto <humpback@gentoo.org>; metadata.xml,
+  +wildfire-2.6.2.ebuild:
+  Bumped to 2.6.2
 
 *wildfire-2.5.0 (26 Feb 2006)
 
