--- a/x11-drivers/xf86-input-citron/ChangeLog
+++ b/x11-drivers/xf86-input-citron/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-citron
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-citron/ChangeLog,v 1.23 2006/06/30 20:26:54 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-citron/ChangeLog,v 1.24 2006/07/01 00:05:38 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-input-citron-2.2.0.ebuild:
+  ppc/sparc/alpha/arm/sh stable
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org>
   xf86-input-citron-2.2.0.ebuild:
