--- a/x11-drivers/xf86-video-impact/ChangeLog
+++ b/x11-drivers/xf86-video-impact/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-impact
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-impact/ChangeLog,v 1.2 2006/06/28 17:39:57 geoman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-impact/ChangeLog,v 1.3 2006/07/01 00:56:42 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-impact-0.2.0.ebuild:
+  stable on mips
 
   28 Jun 2006; Stephen P. Becker <geoman@gentoo.org>
   +files/xf86-video-impact-0.2.0-DCACHE.patch,
