--- a/dev-perl/Test-Class/ChangeLog
+++ b/dev-perl/Test-Class/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Class
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Test-Class/ChangeLog,v 1.16 2006/03/30 23:22:55 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Test-Class/ChangeLog,v 1.17 2006/07/01 01:11:07 mcummings Exp $
+
+  01 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  Test-Class-0.11.ebuild:
+  Keywording ~amd64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Test-Class-0.11.ebuild:
   Mark 0.11 ~ia64
