--- a/x11-apps/sessreg/ChangeLog
+++ b/x11-apps/sessreg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/sessreg
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.17 2006/06/30 20:02:47 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.18 2006/07/01 01:44:22 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; sessreg-1.0.0.ebuild:
+  alpha/arm/mips/ppc/sh/sparc/x86 stable.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> sessreg-1.0.0.ebuild:
   Stable on ppc64
