--- a/x11-apps/sessreg/ChangeLog
+++ b/x11-apps/sessreg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/sessreg
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.18 2006/07/01 01:44:22 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.19 2006/07/01 01:45:00 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; sessreg-1.0.0.ebuild:
+  amd64 stable.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; sessreg-1.0.0.ebuild:
   alpha/arm/mips/ppc/sh/sparc/x86 stable.
