--- a/media-libs/libpng/ChangeLog
+++ b/media-libs/libpng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpng/ChangeLog,v 1.81 2006/06/29 23:05:30 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpng/ChangeLog,v 1.82 2006/07/01 08:09:27 grobian Exp $
+
+  01 Jul 2006; Fabian Groffen <grobian@gentoo.org> libpng-1.2.12.ebuild:
+  Marked ppc-macos stable (bug #138433)
 
 *libpng-1.2.12 (29 Jun 2006)
 
