--- a/media-libs/libpng/ChangeLog
+++ b/media-libs/libpng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpng/ChangeLog,v 1.84 2006/07/01 09:29:23 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpng/ChangeLog,v 1.85 2006/07/01 10:04:38 corsair Exp $
+
+  01 Jul 2006; Markus Rothe <corsair@gentoo.org> libpng-1.2.12.ebuild:
+  Stable on ppc64; bug #138433
 
   01 Jul 2006; Simon Stelling <blubb@gentoo.org> libpng-1.2.12.ebuild:
   stable on amd64 wrt bug 138433
