--- a/kde-base/kicker-applets/ChangeLog
+++ b/kde-base/kicker-applets/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kicker-applets
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kicker-applets/Attic/ChangeLog,v 1.50 2006/07/01 15:18:11 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kicker-applets/Attic/ChangeLog,v 1.51 2006/07/01 15:21:30 flameeyes Exp $
+
+  01 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> Manifest:
+  Regen manifest.
 
   01 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regen manifest.
