--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.176 2006/07/01 00:02:45 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.177 2006/07/01 15:36:41 seemant Exp $
+
+  01 Jul 2006; Seemant Kulleen <seemant@gentoo.org> vlc-0.8.4a-r1.ebuild:
+  stable for bug #121558
 
   01 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> -vlc-0.8.1-r1.ebuild:
   Remove obsolete version.
