--- a/gnome-extra/gnome-games/ChangeLog
+++ b/gnome-extra/gnome-games/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for gnome-extra/gnome-games
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.153 2006/07/01 17:24:30 sebastian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.154 2006/07/01 17:29:00 sebastian Exp $
 
   01 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
   gnome-games-2.14.2.1.ebuild:
-  Drop ~mips as discussed with Stephen Becker <geoman@gentoo.org>.
+  Drop ~arm and ~mips keywords as discussed with Stephen Becker <geoman@gentoo.org>.
 
 *gnome-games-2.14.2.1 (01 Jul 2006)
 
