--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.394 2006/06/30 15:51:09 gothgirl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.395 2006/07/01 19:16:17 gothgirl Exp $
+
+  01 Jul 2006; gothgirl <gothgirl@gentoo.org>
+  +files/gaim-2.0.0_beta3-avahi-compat.patch, gaim-2.0.0_beta3-r1.ebuild:
+  Added avahi-howl and meanwhile support.
 
   30 Jun 2006; gothgirl <gothgirl@gentoo.org> gaim-2.0.0_beta3-r1.ebuild:
   added gadu gadu protocol support
