--- a/media-video/totem/ChangeLog
+++ b/media-video/totem/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/totem
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/totem/ChangeLog,v 1.113 2006/06/30 19:53:43 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/totem/ChangeLog,v 1.114 2006/07/01 19:41:41 dang Exp $
+
+  01 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> totem-1.4.2.ebuild:
+  Fix bad gst-plugins-base dep.  Bug #138689
 
 *totem-1.4.2 (30 Jun 2006)
 
