--- a/mail-client/evolution/ChangeLog
+++ b/mail-client/evolution/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/evolution
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/evolution/ChangeLog,v 1.126 2006/06/27 18:00:08 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/evolution/ChangeLog,v 1.127 2006/07/01 19:58:13 dang Exp $
+
+  01 Jul 2006; <dang@gentoo.org> +files/evolution-2.6.2-as-needed.patch,
+  evolution-2.6.2.ebuild:
+  Fix --as-needed.  Bug #138488
 
 *evolution-2.6.2 (27 Jun 2006)
 
