--- a/x11-apps/xconsole/ChangeLog
+++ b/x11-apps/xconsole/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xconsole
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xconsole/ChangeLog,v 1.16 2006/07/01 21:36:50 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xconsole/ChangeLog,v 1.17 2006/07/01 21:38:15 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xconsole-1.0.2.ebuild:
+  alpha/amd64/arm/mips/ppc/ppc64/sh/sparc/x86 stable.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   -xconsole-1.0.1.ebuild:
