--- a/x11-apps/xdriinfo/ChangeLog
+++ b/x11-apps/xdriinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xdriinfo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdriinfo/ChangeLog,v 1.16 2006/07/01 21:41:11 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdriinfo/ChangeLog,v 1.17 2006/07/01 21:44:04 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xdriinfo-1.0.1.ebuild:
+  More keyword fixing.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xdriinfo-1.0.1.ebuild:
