--- a/virtual/x11/ChangeLog
+++ b/virtual/x11/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/x11
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/x11/Attic/ChangeLog,v 1.10 2006/07/01 01:38:38 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/x11/Attic/ChangeLog,v 1.11 2006/07/01 21:45:31 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; x11-7.0-r2.ebuild:
+  Add x11-apps/xdriinfo to the list.
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; x11-7.0-r2.ebuild:
   alpha/arm/mips/ppc/sh stable. Holding off on sparc for now, gustavoz is
