--- a/sys-apps/busybox/ChangeLog
+++ b/sys-apps/busybox/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/busybox
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.93 2006/07/02 07:17:56 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.94 2006/07/02 07:48:59 corsair Exp $
+
+  02 Jul 2006; Markus Rothe <corsair@gentoo.org> busybox-1.1.3.ebuild:
+  Stable on ppc64; bug #138808
 
 *busybox-1.2.0 (02 Jul 2006)
 
