--- a/dev-perl/Mail-DomainKeys/ChangeLog
+++ b/dev-perl/Mail-DomainKeys/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Mail-DomainKeys
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DomainKeys/ChangeLog,v 1.10 2006/07/02 10:29:06 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DomainKeys/ChangeLog,v 1.11 2006/07/02 11:42:57 corsair Exp $
+
+  02 Jul 2006; Markus Rothe <corsair@gentoo.org>
+  Mail-DomainKeys-0.82.ebuild:
+  Added ~ppc64
 
 *Mail-DomainKeys-0.82 (02 Jul 2006)
 
