--- a/dev-php/PEAR-Auth_SASL/ChangeLog
+++ b/dev-php/PEAR-Auth_SASL/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Auth_SASL
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Auth_SASL/ChangeLog,v 1.24 2006/05/21 01:35:04 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Auth_SASL/ChangeLog,v 1.25 2006/07/02 12:04:36 sebastian Exp $
+
+*PEAR-Auth_SASL-1.0.2 (02 Jul 2006)
+
+  02 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  +PEAR-Auth_SASL-1.0.2.ebuild:
+  Version bump for bug #138816.
 
   21 May 2006; Luca Longinotti <chtekk@gentoo.org>
   -PEAR-Auth_SASL-1.0.1.ebuild:
