--- a/dev-php/PEAR-Log/ChangeLog
+++ b/dev-php/PEAR-Log/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Log
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Log/ChangeLog,v 1.58 2006/05/21 01:02:42 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Log/ChangeLog,v 1.59 2006/07/02 12:07:53 sebastian Exp $
+
+*PEAR-Log-1.9.6 (02 Jul 2006)
+
+  02 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  +PEAR-Log-1.9.6.ebuild:
+  Version bump for bug #138816.
 
   21 May 2006; Luca Longinotti <chtekk@gentoo.org> -PEAR-Log-1.8.7.ebuild:
   Remove old-style PHP packages.
