--- a/dev-php/PEAR-Mail/ChangeLog
+++ b/dev-php/PEAR-Mail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Mail
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Mail/ChangeLog,v 1.27 2006/05/21 01:01:29 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Mail/ChangeLog,v 1.28 2006/07/02 12:09:34 sebastian Exp $
+
+*PEAR-Mail-1.1.10 (02 Jul 2006)
+
+  02 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  +PEAR-Mail-1.1.10.ebuild:
+  Version bump for bug #138816.
 
   21 May 2006; Luca Longinotti <chtekk@gentoo.org> -PEAR-Mail-1.1.4.ebuild,
   -PEAR-Mail-1.1.6.ebuild:
