--- a/dev-php/PEAR-SOAP/ChangeLog
+++ b/dev-php/PEAR-SOAP/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-SOAP
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-SOAP/ChangeLog,v 1.26 2006/05/21 00:28:15 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-SOAP/ChangeLog,v 1.27 2006/07/02 12:06:06 sebastian Exp $
+
+*PEAR-SOAP-0.9.4 (02 Jul 2006)
+
+  02 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  +PEAR-SOAP-0.9.4.ebuild:
+  Version bump for bug #138816.
 
   21 May 2006; Luca Longinotti <chtekk@gentoo.org> -PEAR-SOAP-0.8.1.ebuild:
   Remove old-style PHP packages.
