--- a/sci-electronics/gnucap/ChangeLog
+++ b/sci-electronics/gnucap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/gnucap
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gnucap/ChangeLog,v 1.13 2006/07/01 16:19:47 calchan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gnucap/ChangeLog,v 1.14 2006/07/02 13:49:13 calchan Exp $
+
+  02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
+  Adjusted metadata, see bug #138062.
 
 *gnucap-20060628 (01 Jul 2006)
 
