--- a/dev-perl/File-Remove/ChangeLog
+++ b/dev-perl/File-Remove/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/File-Remove
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.30 2006/05/28 10:36:20 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.31 2006/07/02 13:53:30 mcummings Exp $
+
+  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  -File-Remove-0.30.ebuild, File-Remove-0.31.ebuild:
+  Marking stable amd64
 
   28 May 2006; Bryan Østergaard <kloeri@gentoo.org>
   File-Remove-0.31.ebuild:
