--- a/sci-electronics/gtkwave/ChangeLog
+++ b/sci-electronics/gtkwave/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/gtkwave
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gtkwave/ChangeLog,v 1.13 2006/06/30 18:18:41 calchan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gtkwave/ChangeLog,v 1.14 2006/07/02 14:06:42 calchan Exp $
+
+  02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
+  Adjusted metadata, see bug #138062.
 
 *gtkwave-3.0.5 (30 Jun 2006)
 
