--- a/games-board/ggz-kde-games/ChangeLog
+++ b/games-board/ggz-kde-games/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/ggz-kde-games
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/ggz-kde-games/Attic/ChangeLog,v 1.3 2006/04/29 01:11:00 tupone Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/ggz-kde-games/Attic/ChangeLog,v 1.4 2006/07/02 14:57:40 pylon Exp $
+
+  02 Jul 2006; Lars Weiler <pylon@gentoo.org> ggz-kde-games-0.0.9.ebuild:
+  Stable on ppc; bug #138482.
 
   29 Apr 2006; <Tupone@gentoo.org> +files/ggz-kde-games-0.0.9-gcc41.patch,
   ggz-kde-games-0.0.9.ebuild:
