--- a/sci-electronics/ng-spice-rework/ChangeLog
+++ b/sci-electronics/ng-spice-rework/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/ng-spice-rework
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/ng-spice-rework/Attic/ChangeLog,v 1.13 2006/05/12 20:49:03 calchan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/ng-spice-rework/Attic/ChangeLog,v 1.14 2006/07/02 15:06:13 calchan Exp $
+
+  02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
+  Adjusted metadata, see bug #138062.
 
 *ng-spice-rework-17-r1 (12 May 2006)
 
