--- a/media-gfx/inkscape/ChangeLog
+++ b/media-gfx/inkscape/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.51 2006/06/28 00:05:21 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.52 2006/07/02 17:05:07 mr_bones_ Exp $
+
+  02 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> inkscape-0.44.ebuild:
+  fix invalid dep
 
   28 Jun 2006; Jeroen Roovers <jer@gentoo.org> inkscape-0.44.ebuild:
   Marked ~hppa.
