--- a/media-sound/taginfo/ChangeLog
+++ b/media-sound/taginfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/taginfo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/taginfo/ChangeLog,v 1.1 2006/05/20 19:33:02 jhuebel Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/taginfo/ChangeLog,v 1.2 2006/07/02 18:31:53 jhuebel Exp $
+
+  02 Jul 2006; Jason Huebel <jhuebel@gentoo.org> taginfo-1.2.ebuild:
+  stable on x86 and amd64
 
 *taginfo-1.2 (20 May 2006)
 
