--- a/dev-perl/extutils-parsexs/ChangeLog
+++ b/dev-perl/extutils-parsexs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/extutils-parsexs
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-parsexs/Attic/ChangeLog,v 1.27 2006/05/02 05:15:03 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-parsexs/Attic/ChangeLog,v 1.28 2006/07/02 21:47:10 mcummings Exp $
+
+  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  extutils-parsexs-2.15.ebuild:
+  Marking amd64 stable
 
   02 May 2006; Diego Pettenò <flameeyes@gentoo.org>
   extutils-parsexs-2.15.ebuild:
