--- a/dev-perl/log-dispatch/ChangeLog
+++ b/dev-perl/log-dispatch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/log-dispatch
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/log-dispatch/ChangeLog,v 1.18 2006/03/28 23:32:51 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/log-dispatch/ChangeLog,v 1.19 2006/07/03 00:06:08 mcummings Exp $
+
+  03 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  log-dispatch-2.11.ebuild:
+  Marking amd64 stable
 
   28 Mar 2006; Aron Griffis <agriffis@gentoo.org> log-dispatch-2.11.ebuild:
   Mark 2.11 stable on ia64
