--- a/media-libs/tiff/ChangeLog
+++ b/media-libs/tiff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/tiff
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/tiff/ChangeLog,v 1.88 2006/07/02 16:21:41 pylon Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/tiff/ChangeLog,v 1.89 2006/07/03 03:43:34 tcort Exp $
+
+  03 Jul 2006; Thomas Cort <tcort@gentoo.org> tiff-3.8.2-r1.ebuild:
+  Stable on alpha wrt Bug #131857.
 
   02 Jul 2006; Lars Weiler <pylon@gentoo.org> tiff-3.8.2-r1.ebuild:
   Stable on ppc; bug #131857.
