--- a/media-video/ogle/ChangeLog
+++ b/media-video/ogle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/ogle
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ogle/Attic/ChangeLog,v 1.38 2006/07/03 04:41:46 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ogle/Attic/ChangeLog,v 1.39 2006/07/03 07:22:49 blubb Exp $
+
+  03 Jul 2006; Simon Stelling <blubb@gentoo.org> ogle-0.9.2-r1.ebuild:
+  stable on amd64
 
   03 Jul 2006; Joseph Jezak <josejx@gentoo.org> ogle-0.9.2-r1.ebuild:
   Marked ppc stable for bug #138933.
